# pGerrit

./: .gitignore  Access.py  LICENSE  README.md  cache.sqlite  change.py  client.py  pyproject.toml  restAPIwrapper.py  restAPIwrapper.py.bak  setup.cfg  utils.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: hacks.html  sidebarintro.html  sidebarlogo.html
docs/dev/: contributing.rst
docs/user/: advanced.rst  quickstart.rst
examples/: cherrypick.py  info.py  review.py
pGerrit/: Access.py  __version__.py  change.py  client.py  exception.py  project.py  queryDescriptor.py  queryMeta.py  restAPIwrapper.py  utils.py
tests/: test.py
