[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pGerrit"
version = "0.1.6"
description = "A well designed base on decorator pattern library to access Google Gerrit REST API"
authors = [
    {name = "CY", email = "17103513@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests",
    "requests-cache",
]

[project.urls]
Homepage = "https://github.com/demonguy/pGerrit"
Repository = "https://github.com/demonguy/pGerrit"
Issues = "https://github.com/demonguy/pGerrit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pGerrit*"]