[metadata]
name = pGerrit
version = attr: pGerrit.__version__
author = CY
author_email = 17103513@qq.com
description = A well designed base on decorator pattern library to access Google Gerrit REST API
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Source = https://github.com/demonguy/pGerrit
    Tracker = https://github.com/demonguy/pGerrit/issues

[options]
python_requires = >=3.6
packages = find:
install_requires =
    requests
    requests_cache
